# far2l

./: CMakeLists.txt  HACKING.md  README.md  adeptus_mechanicus_icon.txt  apply-pr.sh  changelog.md  git-debian-changelog.sh
ImageViewer/: CMakeLists.txt
ImageViewer/configs/plug/: ImageViewer_en.hlf  ImageViewer_en.lng  ImageViewer_ru.hlf  ImageViewer_ru.lng
ImageViewer/src/: ImageAtFull.cpp  ImageView.cpp  ImageView.h  lng.h
NetRocks/: CMakeLists.txt  HACKING.txt
NetRocks/configs/plug/: bel.lng  eng.lng  rus.lng
NetRocks/src/: Location.cpp  PluginImpl.cpp  PluginImpl.h  lng.h
NetRocks/src/Host/: HostRemote.cpp  HostRemote.h  HostRemoteBroker.cpp  IPC.h
NetRocks/src/Protocol/: Protocol.h  SplitLocationSpecification.cpp
NetRocks/src/Protocol/FTP/: ProtocolFTP.cpp  ProtocolFTP.h
NetRocks/src/Protocol/NFS/: ProtocolNFS.cpp
NetRocks/src/Protocol/SHELL/: ProtocolSHELL.cpp  ProtocolSHELL.h
NetRocks/src/Protocol/SMB/: ProtocolSMB.cpp
NetRocks/src/Protocol/SSH/: ProtocolSCP.cpp  ProtocolSCP.h  ProtocolSFTP.cpp  ProtocolSFTP.h
OpenWith/: CMakeLists.txt
OpenWith/configs/: OpenWithEng.lng  OpenWithRus.lng  help_en.hlf  help_ru.hlf
OpenWith/src/: AppProvider.cpp  AppProvider.hpp  LaunchServicesBridge.hpp  LaunchServicesBridge.mm  MacOSAppProvider.cpp  MacOSAppProvider.hpp  OpenWith.cpp  OpenWith.hpp  XDGBasedAppProvider.cpp  XDGBasedAppProvider.hpp  lng.hpp
WinPort/: CMakeLists.txt  WinCompat.h  WinPort.h  WinPortDecl.h  windows.h
WinPort/src/: APIClipboard.cpp  APIConsole.cpp  ConsoleBuffer.cpp  ConsoleOutput.cpp  ConsoleOutput.h
WinPort/src/Backend/: Backend.h  ExtClipboardBackend.cpp  ExtClipboardBackend.h  FSClipboardBackend.cpp  FSClipboardBackend.h  SudoAskpassImpl.cpp  TestController.cpp  TestProtocol.h
WinPort/src/Backend/SDL/: SDLBackendUtils.cpp  SDLBackendUtils.h  SDLBoxChars.cpp  SDLBoxChars.h  SDLConsoleRendererImpl.hpp  SDLMain.cpp
WinPort/src/Backend/TTY/: OSC52ClipboardBackend.cpp  OSC52ClipboardBackend.h  TTYBackend.cpp  TTYBackend.h  TTYFar2lClipboardBackend.h  TTYInputSequenceParser.cpp  TTYOutput.cpp  TTYOutput.h  TTYXGlue.cpp  TTYXGlue.h
WinPort/src/Backend/WX/: CMakeLists.txt  CustomDrawChar.cpp  CustomDrawChar.h  Paint.cpp  Paint.h  wxClipboardBackend.cpp  wxClipboardBackend.h  wxMain.cpp  wxMain.h  wxPrinterSupport.cpp  wxPrinterSupport.h  wxWinTranslations.cpp  wxWinTranslations.h
arclite/src/: farutils.cpp  options.cpp  plugin.cpp  sysutils.cpp  ui.cpp
autowrap/src/: AutoWrap.cpp
cmake/modules/: Findfmt.cmake
crest/: CMakeLists.txt  crest.c
editwrap/: EditWrap.cpp
far2l/: CMakeLists.txt
far2l/bootstrap/scripts/: FarEng.hlf.m4  FarHun.hlf.m4  FarRus.hlf.m4  FarUkr.hlf.m4  farlang.templ.m4
far2l/far2sdk/: fardlgbuilder.hpp  fardlgbuilderbase.hpp  farplug-mb.h  farplug-wide.h
far2l/src/: DialogBuilder.cpp  DialogBuilder.hpp  GrepFile.cpp  chattr.cpp  clipboard.cpp  clipboard.hpp  cmdline.cpp  cmdline.hpp  copy.cpp  ctrlobj.cpp  dialog.cpp  dialog.hpp  dlgedit.cpp  edit.cpp  edit.hpp  editor.cpp  editor.hpp  farwinapi.cpp  fileattr.hpp  filediff.cpp  fileedit.cpp  fileedit.hpp  fileedit2html.cpp  fileedit2options.cpp  fileedit2options.hpp  filefilterparams.cpp  fileholder.cpp  fileholder.hpp  filepanels.cpp  filetype.cpp  fileview.cpp  fileview2options.cpp  fileview2options.hpp  findfile.cpp  help.cpp  help.hpp  hilight.cpp  keybar.cpp  keybar.hpp  manager.cpp  (+19 more)
far2l/src/cfg/: ConfigOpt.cpp  ConfigOpt.hpp  ConfigOptEdit.cpp  config.cpp  config.hpp  config_all.cpp
far2l/src/console/: farcolorexp.cpp  farcolors.cpp  farcolors.hpp  grabber.cpp  interf.cpp  interf.hpp  keyboard.cpp  palette.cpp  palette.hpp  scrbuf.cpp
far2l/src/hist/: history.cpp
far2l/src/locale/: codepage.cpp
far2l/src/macro/: macro.cpp  macrobrowser.cpp
far2l/src/mix/: strmix.cpp  strmix.hpp
far2l/src/panels/: filelist.cpp  filelist.hpp  flmodes.cpp  flplugin.cpp  flshow.cpp  flupdate.cpp  panel.cpp  qview.cpp
far2l/src/plug/: PluginA.cpp  PluginW.cpp  plugapi.cpp  plugins.cpp  plugins.hpp  wrap.cpp
far2l/src/vt/: VTShellBackend.cpp  VTShellBackend.h  vtshell.cpp  vtshell_compose.cpp
jumpword/configs/plug/: JumpWordEng.lng
jumpword/src/: JumpWord.cpp  JumpWord.hpp  JumpWordLng.hpp
luafar/: CMakeLists.txt
luafar/src/: bit64.c  exported.c  lregex.c  luafar.h  luamacro.c  luaplug.c  lusercontrol.c  lutf8lib.c  makefarkeys.lua  makeflags.lua  mytimer.c  service.c  slnunico.c  unidata.h  ustring.c  ustring.h  util.c  util.h  version.h
mtp/: CMakeLists.txt
netcfg/: CMakeLists.txt
netcfg/common/: netlink.c
packaging/suse/: filter-changelog.py  git-debian-changelog.sh  git-rpm-changelog.sh
packaging/suse/far2l-build/: changelog  far2l-core_2.6.3-1.dsc  far2l.spec
processes/: CMakeLists.txt  progress.cpp
python/configs/plugins/: readme-plugins.txt  udocker.py  ustealer.py
python/src/: python.cpp
sqlite/: CMakeLists.txt  editor.cpp  editor.h  exporter.cpp  exporter.h  progress.cpp  progress.h
testing/unit/: test_tty_input_parser.cpp
themes/: CMakeLists.txt
themes/CRT Classic/: farcolors.ini
themes/Catpuccin Macchiato/: author.txt  colors.ini  farcolors.ini
themes/Cute Pink/: author.txt  farcolors.ini
themes/DOS Navigator/: farcolors.ini
themes/Fallout Red/: colors.ini
themes/Gold on Blue/: farcolors.ini
themes/Hercules Classic/: farcolors.ini
themes/Hercules Night/: farcolors.ini
themes/MDA Classic/: farcolors.ini
themes/Magenta on Violet/: farcolors.ini
themes/Ogres and Goblins/: farcolors.ini
themes/eInk Mono/: farcolors.ini
transformer/: CMakeLists.txt
transformer/configs/plug/: TransformerEng.hlf  TransformerEng.lng  TransformerRus.hlf  TransformerRus.lng  transformer.ini
transformer/configs/plug/formats/: common.ini  cpp.ini  encoding.ini  json.ini  markdown.ini  python.ini  shell.ini  sql.ini  xml.ini  yaml.ini
transformer/src/: Config.cpp  Config.hpp  Transformer.cpp
transformer/tests/: ConfigTest.cpp
utils/: CMakeLists.txt
utils/include/: BackendOptions.h  Colorspace.h  ExecAsync.h
utils/src/: ExecAsync.cpp  KeyFileHelper.cpp  colorspace.cpp
(+44 files in other folders)
